--- a/faq.html
+++ b/faq.html
@@ -12,8 +12,8 @@ html,body{height:100%;margin:0;padding:0}
 body{background:var(--bg);color:var(--text);font:15px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
 
 nav{background:#0d0f14;border-bottom:1px solid #1a1f2e;padding:0}
-nav .wrap{max-width:1200px;margin:0 auto;display:flex;justify-content:center;align-items:center;gap:40px;padding:16px 20px}
-nav a{color:#b8c5d6;text-decoration:none;font-weight:600;font-size:16px;transition:color 0.2s,transform 0.2s;display:inline-block}
+nav .wrap{max-width:1200px;margin:0 auto;display:flex;justify-content:center;align-items:center;gap:40px;padding:16px 20px;flex-wrap:wrap}
+nav a{color:#b8c5d6;text-decoration:none;font-weight:600;font-size:15px;transition:color 0.2s,transform 0.2s;display:inline-block}
 nav a:hover{color:#fff;transform:translateY(-2px)}
 nav a.active{color:var(--accent);font-weight:700}
 
@@ -80,6 +80,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
     <a href="consignment.html">Consignment</a>
     <a href="resources.html">Resources</a>
     <a href="pricing-guide.html">Pricing Guide</a>
+    <a href="ens-ontology.html">ENS Ontology</a>
   </div>
 </nav>
 
