--- a/featured.html
+++ b/featured.html
@@ -82,6 +82,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 10px}
     <a href="consignment.html">Consignment</a>
     <a href="resources.html">Resources</a>
     <a href="pricing-guide.html">Pricing Guide</a>
+    <a href="ens-ontology.html">ENS Ontology</a>
   </div>
 </nav>
 
