--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@ footer p{color:var(--muted);line-height:1.7;margin:0 0 20px}
     <a href="consignment.html" class="nav-consignment">Consignment</a>
     <a href="resources.html" class="nav-resources">Resources</a>
     <a href="pricing-guide.html">Pricing Guide</a>
+    <a href="ens-ontology.html">ENS Ontology</a>
   </div>
 </nav>
 
